# super-tic-tac-toe

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  chessboard.c  chessboard.h  console.c  game.c  game.h  sstate.c  sstate.h  state_begin.c  state_end.c  state_main.c  state_win.c  states.h  super_chessboard.c  super_chessboard.h  texture.c  texture.h  window.c
